--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Work with us for a better experience. We are  community providing the gratest digital services in the world">
+    <meta property="og:title" content="SEO DUDE...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +19,7 @@
       src="https://kit.fontawesome.com/6982c8b301.js"
       crossorigin="anonymous"
     ></script>
-    <title>SEODUDE</title>
+    <title>SEODUDE - All in one SEO tool need to grow your business rapidly</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
