--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <h2 class="call__heading">Ready To Get Started</h2>
           <p class="call__paragraph">Lorem ipsum dolor sit amet.</p>
           <div class="input-group">
-            <input type="text" class="input" placeholder="Search" />
+            <input type="text" class="input" placeholder="Your email" />
             <span class="newsletter-send__container"><img src="/Images/send.svg" alt="" data-aos="zoom-in" /></span>
           </div>
         </div>
@@ -360,7 +360,6 @@
     </section>
 
     <!--Footer-->
-
     <div class="footer__container">
       <footer class="grid grid--1x2 grid--1x3 grid--1x4">
         <ul class="list" data-aos="fade-up"
@@ -431,7 +430,7 @@
             sequi
           </p>
           <div class="input-group">
-            <input type="text" class="input" placeholder="Search" />
+            <input type="text" class="input" placeholder="Your email" />
             <img src="/Images/send.svg" alt="" />
           </div>
         </div>
